NativePlugins/OmniPcmShared/include/omni_pcm_shared.h

typedef enum OmniPcmStreamFlags {
    OMNI_PCM_FLAG_NONE = 0,
    OMNI_PCM_FLAG_FORMAT_READY = 1u << 0,
    OMNI_PCM_FLAG_DECODER_EOF = 1u << 1,
    OMNI_PCM_FLAG_STREAM_ERROR = 1u << 2,
    OMNI_PCM_FLAG_SEEK_PENDING = 1u << 3,
    OMNI_PCM_FLAG_DISCONTINUITY = 1u << 4,
    OMNI_PCM_FLAG_CLIENT_DRAINED = 1u << 5,
    OMNI_PCM_FLAG_SYNTHETIC_EOF = 1u << 6
} OmniPcmStreamFlags;
typedef struct OmniPcmInfo {
    int32_t sample_rate;
    int32_t channels;
    int32_t bytes_per_frame;
    int32_t buffer_frames;
    int64_t total_frames_hint;
    int64_t decoded_total_frames;
    int64_t effective_total_frames;
} OmniPcmInfo;
typedef struct OmniPcmSnapshot {
    uint32_t version;
    int32_t sample_rate;
    int32_t channels;
    int32_t bytes_per_frame;
    int32_t buffer_frames;
    int32_t legacy_play_state;
    uint32_t flags;
    int64_t write_cursor;
    int64_t read_cursor;
    int64_t stream_id;
    int32_t state;
    int32_t error_code;
    int64_t total_frames_hint;
    int64_t decoded_total_frames;
    int64_t final_write_cursor;
    int64_t audible_cursor;
    int64_t seek_frame;
    int64_t seek_generation;
    int64_t last_update_tick;
    int32_t format_generation;
    char current_uuid[OMNI_PCM_UUID_BYTES];
} OmniPcmSnapshot;
typedef void* OmniPcmHandle;
OMNI_PCM_API uint32_t OMNI_PCM_CALL OmniPcm_GetAbiVersion(void);
OMNI_PCM_API OmniPcmHandle OMNI_PCM_CALL OmniPcm_Open(const wchar_t* map_name);
OMNI_PCM_API void OMNI_PCM_CALL OmniPcm_Close(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_IsOpen(OmniPcmHandle handle);
OMNI_PCM_API uint32_t OMNI_PCM_CALL OmniPcm_GetVersion(OmniPcmHandle handle);
OMNI_PCM_API const char* OMNI_PCM_CALL OmniPcm_GetLastError(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_GetSnapshot(OmniPcmHandle handle, OmniPcmSnapshot* out_snapshot);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_GetInfo(OmniPcmHandle handle, OmniPcmInfo* out_info);
OMNI_PCM_API const char* OMNI_PCM_CALL OmniPcm_GetCurrentUuid(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_BindCurrentStream(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_BindStream(OmniPcmHandle handle, const char* uuid);
OMNI_PCM_API int64_t OMNI_PCM_CALL OmniPcm_GetBoundStreamId(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_IsFormatReady(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_WaitForFormatReady(OmniPcmHandle handle, const char* uuid, int timeout_ms);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_HasDecoderEof(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_IsPlaybackComplete(OmniPcmHandle handle, int64_t tolerance_frames);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_HasError(OmniPcmHandle handle);
OMNI_PCM_API int64_t OMNI_PCM_CALL OmniPcm_ReadFrames(OmniPcmHandle handle, float* buffer, int32_t frames_to_read);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_RequestSeek(OmniPcmHandle handle, int64_t frame);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_CancelPendingSeek(OmniPcmHandle handle);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_SetAudibleCursor(OmniPcmHandle handle, int64_t frame, int allow_backward);
OMNI_PCM_API int OMNI_PCM_CALL OmniPcm_ReportAudioSourcePosition(OmniPcmHandle handle, int32_t time_samples);